lab1/Test/L1-A-12-6.output
Error Type B at Line 5
Error Type B at Line 20
Error Type A at Line 29
Error Type A at Line 35
Error Type A at Line 39
Error Type B at Line 46
